syntax="proto3";

option java_multiple_files = true;
option java_package = "io.grpc.protocal";
option java_outer_classname = "Protocal";

package protocol;

enum RestfulMethod{
    METHODNULL = 0;// 不使用，防止默认为0
    POST = 1;
    PUT = 2;
    GET = 3;
    DELETE = 4;
}

// BODY 体格式
enum RestfulFormat{
    FORMATNULL = 0; // 不使用，防止默认为0
    XML = 1; 
    JSON = 2;
    PROTOBUF = 3;
    RAWQUERY = 4; // url rawquery 用于支持GET
}

message Proto{
    
    // 全局唯一ID，用于日志追踪
    string Bizid =1; 

    // HTTP Header
    map<string,string> Header = 2;

    // Form Value
    map<string,string> Form = 3;
    
    // 集成zipkin trace功能
    map<string,string> TraceMap = 4;
    
    // 递增请求ID，服务内唯一
	int64  RequestID = 5; 
    
    // 路由 Path 如：/services/v1/order
	string ServeURI = 6; 
    
    // 数据编码格式
    RestfulFormat Format = 7; 
    
    // 服务方法 create
    string ServeMethod = 8; 
    
    // HTTP Method
	RestfulMethod Method = 9;
    
    string RemoteAddr = 10;
    // 请求/响应信息
	bytes Body = 11; 
    
    // 响应错误信息，Body 和 Err 互斥
	bytes Err  = 12;
}